Add KPropertyMember.